[package]
name = "tr"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
gpgme = "0.11.0"
sha2 = "0.10.8"
tokio = { version = "1.28", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
local-ip-address = "0.6.3"
qrcode = "0.14.1"
reqwest = { version = "0.11", features = ["json"] }
